--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,9 +48,12 @@
             android:exported="true"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".activity.TermsSecondActivity"
+            android:exported="true"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".activity.TermsDetailActivity"
             android:exported="true"
             android:screenOrientation="portrait" />
     </application>
-
 </manifest>
