--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,11 @@ android {
             signingConfig signingConfigs.config
         }
     }
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
 }
 
 dependencies {
@@ -50,6 +55,7 @@ dependencies {
     compile 'com.jude:swipebackhelper:3.1.2'
     compile 'com.android.support:cardview-v7:26.1.0'
     testCompile 'junit:junit:4.12'
+    implementation files('libs/Msc.jar')
 }
 repositories {
     mavenCentral()
