--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,13 +50,14 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support:design:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.3'
+    compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.4'
     compile 'com.orhanobut:logger:2.1.1'
     compile 'com.github.MagicLonW:floridftoast:1.0.0'
     compile 'com.jude:swipebackhelper:3.1.2'
     compile 'com.android.support:cardview-v7:26.1.0'
     testCompile 'junit:junit:4.12'
     implementation files('libs/Msc.jar')
+    compile 'com.journeyapps:zxing-android-embedded:3.5.0'
 }
 repositories {
     mavenCentral()
@@ -67,7 +68,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.tencent.mm:AndResGuard-gradle-plugin:1.2.8-RC1'
+        classpath 'com.tencent.mm:AndResGuard-gradle-plugin:1.2.10'
     }
 }
 
@@ -94,7 +95,7 @@ andResGuard {
             "resources.arsc"
     ]
     sevenzip {
-        artifact = 'com.tencent.mm:SevenZip:1.2.8-RC1'
+        artifact = 'com.tencent.mm:SevenZip:1.2.10'
         //path = "/usr/local/bin/7za"
     }
 
@@ -109,5 +110,5 @@ andResGuard {
      * Optional: Specifies the name of the message digest algorithm to user when digesting the entries of JAR file
      * Only works in V1signing, default value is "SHA1"
      **/
-    digestalg = "SHA256"
+    digestalg = "SHA-256"
 }
